# contentpal

./: .gitignore  .ignore  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: ingest.rs  mod.rs  repurpose.rs  settings.rs  voice.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/services/: gemini_client.rs  mod.rs  scraper.rs
src/components/: index.ts
src/components/ingest/: SourceInput.tsx
src/components/layout/: AppShell.tsx
src/components/outputs/: OutputPreview.tsx  index.ts
src/components/recipes/: RecipePicker.tsx  index.ts
src/components/run/: StreamViewer.tsx  index.ts
src/components/voice/: BrandSelector.tsx
src/store/: brands.ts  index.ts  projects.ts  recipes.ts  settings.ts
src/types/: index.ts
