[package]
name = "contentpal"
version = "0.1.0"
description = "AI Content Repurposing Studio"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", features = ["json"] }
